--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/plugins/daterangepicker/daterangepicker.css">
     <!-- summernote -->
     <link rel="stylesheet" href="%PUBLIC_URL%/plugins/summernote/summernote-bs4.min.css">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <title>Employee Management</title>
   </head>
   <body  class="hold-transition sidebar-mini layout-fixed" >
